--- a/uulm.css
+++ b/uulm.css
@@ -1,3 +1,4 @@
+
 /*
 body{
 	counter-reset: slides;
@@ -31,7 +32,7 @@ article:not(.fill):not(.title-slide):before{
 	border-top:2px solid #A32638;
 	border-left:32px solid #A32638;
 	position: absolute;
-	width: 900px;
+	width: 100%;
 	height: 28px;
 	min-height: 28px;
 	color: #eee;
@@ -44,10 +45,10 @@ article:not(.fill):not(.title-slide):before{
 .slides.template-uulm-in > article.title-slide img {
   position: absolute;
   left: 0;
-  top: 150px;
-  min-width: 900px;
-  min-height: 350px;
-  height:350px;
+  top: 20%;
+  min-width: 100%;
+  min-height: 50%;
+  height:50%;
 
 
   z-index: -1;
@@ -59,8 +60,8 @@ article:not(.fill):not(.title-slide):before{
 .slides.template-uulm-in > article.title-slide #title{
 	font-size: 48px;
 	  position: absolute;
-	  left: 450px;
-	  top: 525px;
+	  left: 50%;
+	  top: 75%;
 	text-align:left;
 	margin:0;
 	padding:0;
@@ -68,20 +69,20 @@ article:not(.fill):not(.title-slide):before{
 
 
 .slides.template-uulm-in > article.title-slide #subtitle{
-	font-size: 32px;
+	font-size: 28px;
 	  position: absolute;
-	  left: 450px;
-	  bottom: 24px;
+	  left: 50%;
+	  bottom: 3%;
 	text-align:left;
 	margin:0;
 	padding:0;
 }
 
 .slides.template-uulm-in > article.title-slide #author{
-	font-size: 32px;
+	font-size: 28px;
 	  position: absolute;
-	  left: 50px;
-	  bottom: 24px;
+	  left: 5%;
+	  bottom: 3%;
 	text-align:left;
 	margin:0;
 	padding:0;
@@ -89,13 +90,16 @@ article:not(.fill):not(.title-slide):before{
 
 .slides.template-uulm-in > article.title-slide #uulm-logo {
 	  position: absolute;
-	  left: 450px;
-	  top: 24px;
+	  left: 50%;
+	  top: 4%;
 	  z-index: -2;
-	  width: 350px;
-min-width: 350px;
-	min-height: 70px;
-	  height: 70px;	  
+	  width: 38%;
+	  min-width: 38%;
+
+
+	min-height: 10%;
+	  height: 10%;	 
+
 }
 
 .slides.template-uulm-in > article:not(.fill){
