added empty slide example

--- a/template/index.html
+++ b/template/index.html
@@ -270,6 +270,12 @@
         </div>
       </article>
 
+      <article class='fill'>
+        <h3>
+          That's really empty 
+        </h3>        
+      </article>
+
       <article>
         <h3>
           This slide has some code
