added support for slide jumps (key 'g') and first/last via key 'home'/'end'

--- a/template/index.html
+++ b/template/index.html
@@ -28,7 +28,7 @@
 
     <meta charset='utf-8'>
  <script
-      src='http://html5slides.googlecode.com/svn/trunk/slides.js'></script>
+      src='../slides.js'></script>
 
 	<link href="../uulm.css" media="screen" rel="stylesheet" type="text/css" />
   </head>
