--- a/uulm.css
+++ b/uulm.css
@@ -1,5 +1,5 @@
-
 /*
+
 body{
 	counter-reset: slides;
 }
@@ -30,16 +30,37 @@ article:not(.fill):not(.title-slide):before{
 	content:"";
 	display:block;
 	border-top:2px solid #A32638;
-	border-left:32px solid #A32638;
 	position: absolute;
 	width: 100%;
-	height: 28px;
-	min-height: 28px;
-	color: #eee;
+	height: 2px;
+	min-height: 2px;
 	left: 0;
 	top: 24px;
-	font-size:16px;
 }
+
+.slide-nr {
+	display:none;
+}
+
+.slides.template-uulm-in > article:not(.fill):not(.title-slide) .slide-nr{
+	display:inline;
+	position: absolute;
+	color: #eee;
+	font-size:18px;
+	line-height: 26px;
+	  font-weight: 600;
+  letter-spacing: -1px;
+	min-width: 26px;
+	left: 0;
+	top: 24px;
+	padding:0px;
+	padding-left:6px;
+	padding-right:6px;
+	margin:0;
+	background: #A32638;
+	text-align:center;
+}
+
 
 
 .slides.template-uulm-in > article.title-slide img {
@@ -101,6 +122,8 @@ article:not(.fill):not(.title-slide):before{
 	  height: 10%;	 
 
 }
+
+
 
 .slides.template-uulm-in > article:not(.fill){
 	padding-top: 100px;
