added uulm color schemes

--- a/template/index.html
+++ b/template/index.html
@@ -212,17 +212,17 @@
         </h3>
         <ul>
           <li>
-            <span class='red'>class="red"</span>
+            <span class='uulm-color'>class="uulm-color"</span>
           <li>
-            <span class='blue'>class="blue"</span>
+            <span class='in-color'>class="in-color"</span>
           <li>
-            <span class='green'>class="green"</span>
+            <span class='mawi-color'>class="mawi-color"</span>
           <li>
-            <span class='yellow'>class="yellow"</span>
+            <span class='nawi-color'>class="nawi-color"</span>
           <li>
-            <span class='black'>class="black"</span>
+            <span class='med-color'>class="med-color"</span>
           <li>
-            <span class='white'>class="white"</span>
+            <span class='accent-color'>class="accent-color"</span>
           <li>
             <b>bold</b> and <i>italic</i>
         </ul>
