improved template, css cleanup

--- a/template/index.html
+++ b/template/index.html
@@ -24,7 +24,7 @@
 
 <html>
   <head>
-    <title>Hello World</title>
+    <title>HTML5 Slide Deck – uulm Style</title>
 
     <meta charset='utf-8'>
  <script
@@ -43,142 +43,192 @@
   <body style='display: none'>
 
     <section class='slides layout-normal template-uulm-in'>
-      
       <!-- Your slides (<article>s) go here. Delete or comment out the
            slides below. -->
         
 
     <article class='title-slide'>
         <h1 id="title">
-          This is a title
+          HTML5 Slide Deck
         </h1>
         <h2 id="author">
-	Author<br>
-	Date and location
+	Benjamin Erb<br>
+	July 2011
         </h2>
         <h2 id="subtitle">
-          subtitle can have <br>
-	  an additional line
+          Feature Demonstration<br>
+	  HTML5 + CSS3 + some JS
         </h2>
         <p>
-          <img id="title-header" src='images/example-cat.jpg'>
+          <img id="title-header" src='images/header_sample.jpg'>
           <img id="uulm-logo" src='../images/uulm_logo.svg'>
         </p>
       </article>
 
+      <article>
+        <h3>
+          The nitty-gritty, this is a slide:
+        </h3>
+        <section>
+        <pre>
+      &lt;article&gt;
+        &lt;h3&gt;
+          Slide captions are &lt;h3&gt; headings
+        &lt;/h3&gt;
+        &lt;p&gt;
+	  Each slide is represented by an HTML5 &lt;article&gt;. 
+          Content is regular HTML, such as this &lt;p&gt; paragraph
+        &lt;/p&gt;
+        &lt;p&gt;
+          Lorem ipsum dolor sit amet.
+        &lt;/p&gt;
+      &lt;/article&gt;
+</pre>
+        </section>
+	<p>You can see on next slide what it looks like.</p>
+      </article>
+
+
 
       <article>
         <h3>
-          Simple slide with header and text
+          Slide captions are &lt;h3&gt; headings
         </h3>
         <p>
-          This is a slide with just text. This is a slide with just text.
-          This is a slide with just text. This is a slide with just text.
-          This is a slide with just text. This is a slide with just text.
+	  Each slide is represented by an HTML5 &lt;article&gt;. 
+          Content is regular HTML, such as this &lt;p&gt; paragraph
         </p>
         <p>
-          There is more text just underneath with a <code>code sample: 5px</code>.
+          Lorem ipsum dolor sit amet.
         </p>
       </article>
 
       <article class='smaller'>
         <h3>
-          Simple slide with header and text (small font)
+          You can use a smaller font, too
         </h3>
+       <section>
+        <pre>
+&lt;article class='smaller'&gt;
+</pre>
+        </section>
         <p>
-          This is a slide with just text. This is a slide with just text.
-          This is a slide with just text. This is a slide with just text.
-          This is a slide with just text. This is a slide with just text.
+         Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
         </p>
-        <p>
-          There is more text just underneath with a <code>code sample: 5px</code>.
+        <p class="in-color">
+          <strong>Try to prevent such slides!</strong> Your audience will hate you (with a good reason).
         </p>
       </article>
 
       <article>
         <h3>
-          Slide with bullet points and a longer title, just because we
-          can make it longer
+          Death by Bullet Point
         </h3>
         <ul>
-          <li>
-            Use this template to create your presentation
-          </li>
-          <li>
-            Use the provided color palette, box and arrow graphics, and
-            chart styles
-          </li>
-          <li>
-            Instructions are provided to assist you in using this
-            presentation template effectively
-          </li>
-          <li>
-            At all times strive to maintain Google's corporate look and feel
-          </li>
+          <li>Bullshit – We can do it, too!</li>
+          <li>Unique selling proposition</li>
+          <li>Return on investment</li>
+          <li>Yada yada yada</li>
+          <li>Never use more than 5 bullets on a single slide!</li>
         </ul>
       </article>
 
       <article>
         <h3>
-          Slide with bullet points that builds
+          Death by Bullet Point – Creeping death version
         </h3>
         <ul class="build">
-          <li>
-            This is an example of a list
-          </li>
-          <li>
-            The list items fade in
-          </li>
-          <li>
-            Last one!
-          </li>
+          <li>Bullshit – We can do it, too!</li>
+          <li>Unique selling proposition</li>
+          <li>Return on investment</li>
+          <li>Yada yada yada</li>
+          <li>Never use more than 5 bullets on a single slide!</li>
         </ul>
 
         <div class="build">
-          <p>Any element with child nodes can build.</p>
-          <p>It doesn't have to be a list.</p>
+	<h4>How it works:</h4>
+             <section>
+	<pre>
+&lt;ul class='build'&gt;	
+</pre>
+	<pre>
+&lt;div class='build'&gt;	
+</pre>
+		</section>
         </div>
       </article>
 
       <article class='smaller'>
         <h3>
-          Slide with bullet points (small font)
+          Death by Bullet Point – Shotgun version (small font)
         </h3>
         <ul>
-          <li>
-            Use this template to create your presentation
-          <li>
-            Use the provided color palette, box and arrow graphics, and
-            chart styles
-          <li>
-            Instructions are provided to assist you in using this
-            presentation template effectively
-          <li>
-            At all times strive to maintain Google's corporate look and feel
+          <li>Yada yada yada</li>
+          <li>Yada yada yada</li>
+          <li>Yada yada yada</li>
+          <li>Yada yada yada</li>
+          <li>Yada yada yada</li>
+          <li>Yada yada yada</li>
+          <li>Yada yada yada</li>
+          <li>Yada yada yada</li>
+          <li>Yada yada yada</li>
+          <li>Yada yada yada</li>
         </ul>
       </article>
 
       <article>
+        <h2>
+          By the way…
+        </h2>
+      </article>
+
+      <article class='fill'>
+        <q>
+          Power corrupts and PowerPoint corrupts absolutely.
+        </q>
+        <div class='author'>
+          Vint Cerf 
+        </div>
+      </article>
+
+      <article>
         <h3>
-          Slide with a table
+          Cheat Sheet – Shortcuts
         </h3>
         
         <table>
           <tr>
-            <th>
-              Name
-            <th>
-              Occupation
+            <th>Key</th>
+            <th>Function</th>
+          </tr>
           <tr>
-            <td>
-              Luke Mahé
-            <td>
-              V.P. of Keepin’ It Real
+            <td>enter/space/right arrow</td>
+            <td>advance</td>
+          </tr>
           <tr>
-            <td>
-              Marcin Wichary
-            <td>
-              The Michael Bay of Doodles
+            <td>backspace/left arrow</td>
+            <td>go back</td>
+          </tr>
+          <tr>
+            <td>g</td>
+            <td>prompt: go to slide</td>
+          </tr>
+          <tr>
+            <td>home/pos1</td>
+            <td>jump to start slide</td>
+          </tr>
+          <tr>
+            <td>end</td>
+            <td>jump to end slide</td>
+          </tr>
+          <tr>
+            <td>shift +/-</td>
+            <td>zoom in/out</td>
+          </tr>
+          <tr>
+            <td>F11</td>
+            <td>fullscreen mode</td>
+          </tr>
         </table>
       </article>
       
@@ -189,20 +239,37 @@
         
         <table>
           <tr>
-            <th>
-              Name
-            <th>
-              Occupation
+            <th>Key</th>
+            <th>Function</th>
+          </tr>
           <tr>
-            <td>
-              Luke Mahé
-            <td>
-              V.P. of Keepin’ It Real
+            <td>enter/space/right arrow</td>
+            <td>advance</td>
+          </tr>
           <tr>
-            <td>
-              Marcin Wichary
-            <td>
-              The Michael Bay of Doodles
+            <td>backspace/left arrow</td>
+            <td>go back</td>
+          </tr>
+          <tr>
+            <td>g</td>
+            <td>prompt: go to slide</td>
+          </tr>
+          <tr>
+            <td>home/pos1</td>
+            <td>jump to start slide</td>
+          </tr>
+          <tr>
+            <td>end</td>
+            <td>jump to end slide</td>
+          </tr>
+          <tr>
+            <td>shift +/-</td>
+            <td>zoom in/out</td>
+          </tr>
+          <tr>
+            <td>F11</td>
+            <td>fullscreen mode</td>
+          </tr>
         </table>
       </article>
       
@@ -227,22 +294,16 @@
             <b>bold</b> and <i>italic</i>
         </ul>
       </article>
-      
-      <article>
-        <h2>
-          Segue slide
-        </h2>
-      </article>
 
       <article>
         <h3>
           Slide with an image
         </h3>
         <p>
-          <img style='height: 500px' src='images/example-graph.png'>
+          <img style='height: 400px' src='images/social_viz2.jpg'>
         </p>
         <div class='source'>
-          Source: Sergey Brin
+          Source: Benjamin Erb
         </div>
       </article>
 
@@ -251,10 +312,10 @@
           Slide with an image (centered)
         </h3>
         <p>
-          <img class='centered' style='height: 500px' src='images/example-graph.png'>
+          <img class='centered' style='height: 400px' src='images/social_viz2.jpg'>
         </p>
         <div class='source'>
-          Source: Larry Page
+          Source: Benjamin Erb
         </div>
       </article>
 
@@ -263,107 +324,44 @@
           Image filling the slide (with optional header)
         </h3>
         <p>
-          <img src='images/example-cat.jpg'>
+          <img src='images/social_viz.jpg'>
         </p>
         <div class='source white'>
-          Source: Eric Schmidt
+          Source: Benjamin Erb
         </div>
       </article>
 
-      <article>
-        <h3>
-          This slide has some code
-        </h3>
-        <section>
-        <pre>
-&lt;script type='text/javascript'&gt;
-  // Say hello world until the user starts questioning
-  // the meaningfulness of their existence.
-  function helloWorld(world) {
-    for (var i = 42; --i &gt;= 0;) {
-      alert('Hello ' + String(world));
-    }
-  }
-&lt;/script&gt;
-&lt;style&gt;
-  p { color: pink }
-  b { color: blue }
-  u { color: 'umber' }
-&lt;/style&gt;
-</pre>
-        </section>
-      </article>
-      
-      <article class='smaller'>
-        <h3>
-          This slide has some code (small font)
-        </h3>
-        <section>
-        <pre>
-&lt;script type='text/javascript'&gt;
-  // Say hello world until the user starts questioning
-  // the meaningfulness of their existence.
-  function helloWorld(world) {
-    for (var i = 42; --i &gt;= 0;) {
-      alert('Hello ' + String(world));
-    }
-  }
-&lt;/script&gt;
-&lt;style&gt;
-  p { color: pink }
-  b { color: blue }
-  u { color: 'umber' }
-&lt;/style&gt;
-</pre>
-        </section>
-      </article>
-      
-      <article>
-        <q>
-          The best way to predict the future is to invent it.
-        </q>
-        <div class='author'>
-          Alan Kay
-        </div>
-      </article>
-      
-      <article class='smaller'>
-        <q>
-          A distributed system is one in which the failure of a computer 
-          you didn’t even know existed can render your own computer unusable.
-        </q>
-        <div class='author'>
-          Leslie Lamport
-        </div>
-      </article>
-      
+
       <article class='nobackground'>
         <h3>
           A slide with an embed + title
         </h3>
-        
-        <iframe src='http://www.google.com/doodle4google/history.html'></iframe>
+        <iframe src='https://github.com/berb/html5slides-uulm/'></iframe>
       </article>
 
       <article class='nobackground'>
-        <iframe src='http://www.google.com/doodle4google/history.html'></iframe>
+        <iframe src='https://github.com/berb/html5slides-uulm/'></iframe>
       </article>
 
       <article class='fill'>
         <h3>
-          Full-slide embed with (optional) slide title on top
+          I'm on a iframe (fullscreen)!
         </h3>
-        <iframe src='http://www.google.com/doodle4google/history.html'></iframe>
+        <iframe src='https://github.com/berb/html5slides-uulm/'></iframe>
       </article>
-      
+
       <article>
         <h3>
-          Thank you!
+          That's all for now!
         </h3>
         
         <ul>
           <li>
-            <a href='http://www.google.com'>google.com</a>
+            Source: <a href='https://github.com/berb/html5slides-uulm'>github.com/berb/html5slides-uulm</a>
+          <li>
+            <a href='http://www.benjamin-erb.de'>Benjamin Erb</a>
+          <li>
+            <a href='http://code.google.com/p/html5slides'>Original Google html5slides</a>
         </ul>
       </article>
 
