--- a/styles.css
+++ b/styles.css
@@ -424,10 +424,11 @@ iframe {
   width: 100%;
 
   height: 620px;
-
+/*
   background: white;
   border: 1px solid rgb(192, 192, 192);
   margin: -1px;
+*/
   /*box-shadow: inset 0 2px 6px rgba(0, 0, 0, .1);*/
 }
 
@@ -511,7 +512,7 @@ q {
   margin-right: 150px;    
 }
 q::before {
-  content: '“';
+  content: '„';
   
   position: absolute;
   display: inline-block;
@@ -523,7 +524,7 @@ q::before {
   color: rgb(192, 192, 192);
 }
 q::after {
-  content: '”';
+  content: '“';
 
   position: absolute;  
   margin-left: .1em;
@@ -610,3 +611,7 @@ article.smaller q::after {
 .prettyprint .var { /* a declaration; a variable name */
   color: rgb(127, 0, 127);
 }  
+
+.slide-nr {
+	display:none;
+}
