--- a/template/index.html
+++ b/template/index.html
@@ -122,6 +122,31 @@
 
       <article>
         <h3>
+          Presenter notes
+        </h3>
+	<p>
+		Presenter notes are semi-transparent overlays that can be toggled.
+		They will not be shown in the regular slide deck by default.
+	</p>
+        <section>
+        <pre>
+      &lt;article&gt;
+	...
+        &lt;aside&gt;
+          This is a presenter note!
+        &lt;/aside&gt;
+      &lt;/article&gt;
+</pre>
+        </section>
+	<p>Push <strong class="accent-color">n</strong> to toggle presenter notes</p>
+
+	<aside>
+		This is presenter note!
+	</aside>
+      </article>
+
+      <article>
+        <h3>
           Death by Bullet Point
         </h3>
         <ul>
@@ -229,6 +254,10 @@
             <td>F11</td>
             <td>fullscreen mode</td>
           </tr>
+          <tr>
+            <td>n</td>
+            <td>show/hide presenter notes</td>
+          </tr>
         </table>
       </article>
       
@@ -269,6 +298,10 @@
           <tr>
             <td>F11</td>
             <td>fullscreen mode</td>
+          </tr>
+          <tr>
+            <td>n</td>
+            <td>show/hide presenter notes</td>
           </tr>
         </table>
       </article>
@@ -332,14 +365,14 @@
       </article>
 
 
-      <article class='nobackground'>
+      <article>
         <h3>
           A slide with an embed + title
         </h3>
         <iframe src='https://github.com/berb/html5slides-uulm/'></iframe>
       </article>
 
-      <article class='nobackground'>
+      <article>
         <iframe src='https://github.com/berb/html5slides-uulm/'></iframe>
       </article>
 
