--- a/template/index.html
+++ b/template/index.html
@@ -141,7 +141,7 @@
 	<p>Push <strong class="accent-color">n</strong> to toggle presenter notes</p>
 
 	<aside>
-		This is presenter note!
+		This is a presenter note!
 	</aside>
       </article>
 
