updated demo slides

--- a/template/index.html
+++ b/template/index.html
@@ -145,6 +145,43 @@
 	</aside>
       </article>
 
+
+      <article>
+        <h3>
+          Toggle transitions
+        </h3>
+	<p>Don't like fancy stuff?</p>
+	<p>Push <strong class="accent-color">t</strong> to toggle transition mode!</p>
+      </article>
+
+      <article class="smaller">
+        <h3>
+          Presenter Mode – <span class="nawi-color">CAUTION: EXPERIMENTAL</span>
+        </h3>
+        <ul>
+          <li>Run the current presentation on the beamer (fullscreen)</li>
+          <li>Hit <strong class="accent-color">p</strong> to open a secondary frame and wait until fully loaded</li>
+          <li>Move frame onto the presenter's screen (i.e. laptop screen) </li>
+          <li>Switch focus back to beamer screen</li>
+          <li>Control presentation using the frame on the beamer screen</li>
+        </ul>	
+	<h4>Features:</h4>
+        <ul>
+          <li>Presenter frame show presenter notes overlay</li>
+          <li>Presenter frame has transitions disabled</li>
+          <li>Presenter frame always shows full slide (nothing is unhiding)</li>
+          <li>Hit <strong class="accent-color">.</strong> or <strong class="accent-color">,</strong> to sneak forward/backward only on the presenter screen</li>
+          <li>Auto-syncs with primary presentation frame movements </li>
+        </ul>	
+
+	<aside>
+		<h3>Presenter Notes</h3>
+		<p>I'm only visible on your secondary frame</p>
+		<p>That's a cool usage for HTML5 window.postMessage(), huh? :-D</p>
+		
+	</aside>
+      </article>
+
       <article>
         <h3>
           Death by Bullet Point
@@ -156,6 +193,10 @@
           <li>Yada yada yada</li>
           <li>Never use more than 5 bullets on a single slide!</li>
         </ul>
+	<aside>
+		<h2>ROI at least 1000%!11!</h2>
+		
+	</aside>
       </article>
 
       <article>
@@ -258,12 +299,16 @@
             <td>n</td>
             <td>show/hide presenter notes</td>
           </tr>
+          <tr>
+            <td>t</td>
+            <td>toggle transitions</td>
+          </tr>
         </table>
       </article>
       
       <article class='smaller'>
         <h3>
-          Slide with a table (smaller text)
+          Cheat Sheet – Shortcuts (incl. presenter mode)
         </h3>
         
         <table>
@@ -302,6 +347,22 @@
           <tr>
             <td>n</td>
             <td>show/hide presenter notes</td>
+          </tr>
+          <tr>
+            <td>t</td>
+            <td>toggle transitions</td>
+          </tr>
+          <tr>
+            <td>p</td>
+            <td>open presenter frame</td>
+          </tr>
+          <tr>
+            <td>.</td>
+            <td>sneak forward in presenter frame</td>
+          </tr>
+          <tr>
+            <td>,</td>
+            <td>sneak backward in presenter frame</td>
           </tr>
         </table>
       </article>
