add a substructuring mechanism
leverage section-tags to create substructur in your presentation.

ATM this is still a bit awkward, you have to create a structure like
the following:

  <section class="structure id="Motivation">
    <section class="slides">
      <article>
	...
      </article>
    </section>
  <section>
  <section class="structure id="Approach">
    <section class="slides">
    ...
    </section>
  </section>
  <section class="structure" id="Evaluation>
  ...
  </section>
  <section class="structure" id="Conclusion>
  ...
  </section>

Note: The repetition of the inner section of class `slides` is
redundant and is an implementation artifact.

Note: You don't have to specify an outer section of class structure.

You can also create a table of contents like this:

  <section class="slides">
    <article>
      <ul class="theToc">
      </ul>
    </article>
  </section>

--- a/template/index.html
+++ b/template/index.html
@@ -64,7 +64,15 @@
           <img id="uulm-logo" src='../images/uulm_logo.svg'>
         </p>
       </article>
+      <article>
+	<h3>Outline</h3>
+	<ul class="theToc"></ul>
+      </article>
+      </section>
 
+
+      <section class="structure" id="How-To">
+	<section class='slides layout-normal template-uulm-in'>
       <article>
         <h3>
           The nitty-gritty, this is a slide:
@@ -349,12 +357,16 @@
         </h3>
         <iframe src='https://github.com/berb/html5slides-uulm/'></iframe>
       </article>
+      </section>
+      </section>
 
+      <section class="structure" id="Conclusion">
+	<section class='slides layout-normal template-uulm-in'>
       <article>
         <h3>
           That's all for now!
         </h3>
-        
+
         <ul>
           <li>
             Source: <a href='https://github.com/berb/html5slides-uulm'>github.com/berb/html5slides-uulm</a>
