--- a/styles.css
+++ b/styles.css
@@ -368,7 +368,7 @@ ul {
   margin: 0;
   padding: 0;
 
-  margin-top: 40px;
+  margin-top: 1em;
 
   margin-left: .75em;
 }
@@ -402,8 +402,8 @@ pre {
   
   letter-spacing: -1px;
 
-  margin-top: 40px;
-  margin-bottom: 40px;
+  margin-top: 1em;
+  margin-bottom: 1em;
 
   color: black;
   background: rgb(240, 240, 240);
