--- a/styles.css
+++ b/styles.css
@@ -297,7 +297,7 @@ p {
   margin: 0;
   padding: 0;
 
-  margin-top: 20px;
+  margin-top: 1em;
 }
 p:first-child {
   margin-top: 0;
@@ -367,10 +367,10 @@ ul {
   list-style: none;
   margin: 0;
   padding: 0;
-
+  padding-left: 1em;
   margin-top: 1em;
-
   margin-left: .75em;
+  margin-bottom: 1.25em;
 }
 ul:first-child {
   margin-top: 0;
